# ChangeLog for x11-misc/xscreensaver
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/xscreensaver/ChangeLog,v 1.207 2008/01/01 16:44:54 drac Exp $

  01 Jan 2008; Samuli Suominen <drac@gentoo.org>
  files/xscreensaver-5.04-nsfw.patch, xscreensaver-5.04.ebuild:
  Update offensive patch, do less.

  30 Dec 2007; Samuli Suominen <drac@gentoo.org>
  +files/xscreensaver-5.04-gentoo.patch, xscreensaver-5.04.ebuild:
  Update patch. Sort ebuild.

*xscreensaver-5.04 (30 Dec 2007)

  30 Dec 2007; Samuli Suominen <drac@gentoo.org>
  -files/xscreensaver-5.02-gdmflexiserver.patch,
  -files/xscreensaver-5.02-nsfw.patch, -files/xscreensaver-5.02-pam.patch,
  +files/xscreensaver-5.04-desktop-entry.patch,
  +files/xscreensaver-5.04-nsfw.patch, -xscreensaver-5.02-r2.ebuild,
  +xscreensaver-5.04.ebuild:
  Version bump. Use global use flag for setuid screensavers. Use up to date
  .desktop file from tarball patched to f.d.o desktop entry standard. Pass
  --with-x-app-defaults to econf instead of moving files around in D. Remove
  old version.

  20 Nov 2007; Joshua Kinard <kumba@gentoo.org> xscreensaver-5.03.ebuild:
  Stable on mips, per #195253.

  27 Oct 2007; Samuli Suominen <drac@gentoo.org> xscreensaver-5.03.ebuild:
  arm stable.

  14 Oct 2007; Raúl Porcel <armin76@gentoo.org> xscreensaver-5.03.ebuild:
  alpha/ia64/sparc stable wrt #195253

  13 Oct 2007; Tom Gall <tgall@gentoo.org> xscreensaver-5.03.ebuild:
  stable on ppc64, bug #195253

  11 Oct 2007; Lars Weiler <pylon@gentoo.org> xscreensaver-5.03.ebuild:
  stable ppc, bug #195253

  09 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  xscreensaver-5.03.ebuild:
  stable x86, bug 195253

  09 Oct 2007; Jeroen Roovers <jer@gentoo.org> xscreensaver-5.03.ebuild:
  Stable for HPPA (bug #195253).

  09 Oct 2007; Christoph Mende <angelos@gentoo.org>
  xscreensaver-5.03.ebuild:
  Stable on amd64 wrt bug #195253

*xscreensaver-5.03 (17 Jul 2007)
