@@ -6,7 +6,7 @@ AUX xscreensaver-5.04-gentoo.patch 4806 RMD160 abc9b3e218d4a8a5618d1ab04d00a21d4
 AUX xscreensaver-5.04-nsfw.patch 2068 RMD160 0a0a1081584b81c8beda6cd7d6bd89d0dc8da72c SHA1 a2768a4bef374c7d36bd285e65244877abef752a SHA256 bdd5a0363ec5f71886b3fc402749d9082ba4be4d1e7e05eeb81d5271b2cd1acd
 DIST xscreensaver-5.03.tar.gz 5412089 RMD160 f28aca829982c9b9b1989f03309e48fdbdc8e2de SHA1 e283a52faf6148273a82a9e5c9ed70c5722cdcb8 SHA256 82ad32523f5e6b8c8b6431aac4474f2bfde9d4cf70caec9446ed900f48887d26
 DIST xscreensaver-5.04.tar.gz 5438905 RMD160 cf8c59a1aff1139c8d205bb734a17bc706f75287 SHA1 1733ba7ee46b758453ef9ded0fc4ee084b7420a9 SHA256 d1200b497795e6e32853e434a81be0cba718a3a46457b378cad7ac9d0dfba6d7
-EBUILD xscreensaver-5.03.ebuild 4528 RMD160 dd2ea429d60722c5fd10ea16791ce0de221b388d SHA1 55d105670b2df992bac926c469eb24acf5527a21 SHA256 e86a8f7db5943a9bbb7d50ad2d630fd2102666b7c4962147013f9c3099bce36f
-EBUILD xscreensaver-5.04.ebuild 2854 RMD160 c128ade95aca99f262ac4d996c204dee756b7753 SHA1 f2d7998f5986c2c4b4c6495e1438733a916a0555 SHA256 2e8204bec7986db3c95a93392c9a98e529bd8a076695323a641421cd50dce84d
-MISC ChangeLog 34158 RMD160 003eff7e781ffc62526a526878ee78370b0c09da SHA1 348013a640e80220d869cd4920fe15c75bc859f5 SHA256 73ed1bde69e3a2f60d4442fab55a4c34b626f4c8c3d41971a1267d0a7149fcf4
+EBUILD xscreensaver-5.03.ebuild 4552 RMD160 df2eb78c172cbe86f186947d50b232a88e3749c5 SHA1 578dfa004b0fd4cae1f7d6c868497b890c87e9c9 SHA256 cc31bfac19ec5156dbf0fbde290e16f3f44af6fc439ae901b1786d60a305dd78
+EBUILD xscreensaver-5.04.ebuild 2808 RMD160 14b61ce260bb44e863136cfe6d53aa3f524ed64f SHA1 db39a98ff290a0b0cb618d3ee98a57993fb6d91d SHA256 7eca96105f88211812edfc82192b03f826341ece5d13b4ba24bb1584f67fc428
+MISC ChangeLog 34249 RMD160 cffb0cd302050232f636dfb7c287fffcac33a1b9 SHA1 bddf767c95210c07155cf544eda3c91d3b5dea9a SHA256 ef3650cbbd9e270d168db0e9384f49592e27874879cf4e5fa13739baea2c1a49
 MISC metadata.xml 387 RMD160 c34d8cf1f88cf45e7d0b6503f403ab8b8db11b20 SHA1 debca11d5df5829ba86249140fdb4f4a42d3103c SHA256 5ae2b87a5da10d0ec7099d2f48602c4d9c09e0247c0ff85856cf4b944d761360
