@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xscreensaver/xscreensaver-5.04.ebuild,v 1.3 2008/01/01 16:44:54 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xscreensaver/xscreensaver-5.04.ebuild,v 1.4 2008/01/29 21:10:09 drac Exp $
 
 EAPI="prefix"
 
@@ -12,18 +12,16 @@ HOMEPAGE="http://www.jwz.org/xscreensaver"
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="~amd64 ~ia64 ~mips ~x86 ~x86-fbsd ~x86-solaris"
+KEYWORDS="~x86-fbsd ~amd64-linux ~ia64-linux ~mips-linux ~x86-linux ~x86-solaris"
 IUSE="jpeg new-login opengl pam suid xinerama"
 
 RDEPEND="x11-libs/libXxf86misc
 	x11-apps/xwininfo
 	x11-apps/appres
 	media-libs/netpbm
-	>=sys-libs/zlib-1.1.4
 	>=dev-libs/libxml2-2.5
 	>=x11-libs/gtk+-2
 	>=gnome-base/libglade-1.99
-	>=dev-libs/glib-2
 	pam? ( virtual/pam )
 	jpeg? ( media-libs/jpeg )
 	opengl? ( virtual/opengl )
@@ -49,7 +47,6 @@ src_unpack() {
 	epatch "${FILESDIR}"/${P}-gentoo.patch
 	epatch "${FILESDIR}"/${P}-nsfw.patch
 
-	# Mailed upstream.
 	epatch "${FILESDIR}"/${P}-desktop-entry.patch
 
 	eautoreconf
@@ -59,7 +56,7 @@ src_unpack() {
 }
 
 src_compile() {
-	# Simple workaround for the flurry screensaver. Update, still needed for 5.04.
+	# Simple workaround for the flurry screensaver. Still needed for 5.04.
 	filter-flags -mabi=altivec
 	filter-flags -maltivec
 	append-flags -U__VEC__
